--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -16,10 +16,12 @@
                     <a href="http://wp.me/p3mRWu-11L" target="_blank"><i class="fa fa-info fa-fw"></i>&nbsp;About</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/photos']"><i class="fa fa-camera fa-fw"></i>&nbsp;Photos</a>
+                    <a [routerLink]="['/photos']"><i class="fa fa-camera fa-fw"></i>&nbsp;Photos123</a>
                 </li>
                 <li>
                 <li><a [routerLink]="['/albums']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums</a></li>
+                <li>
+                <li><a [routerLink]="['/test']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Test</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-pencil-square-o fa-fw"></i>&nbsp;Blog<b class="caret"></b></a>
                     <ul class="dropdown-menu">
