Added test component for testing new message and user services
Signed-off-by: Andrii <tsap.andriy@gmail.com>

--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -16,7 +16,7 @@
                     <a href="http://wp.me/p3mRWu-11L" target="_blank"><i class="fa fa-info fa-fw"></i>&nbsp;About</a>
                 </li>
                 <li>
-                    <a [routerLink]="['/photos']"><i class="fa fa-camera fa-fw"></i>&nbsp;Photos123</a>
+                    <a [routerLink]="['/photos']"><i class="fa fa-camera fa-fw"></i>&nbsp;Photos</a>
                 </li>
                 <li>
                 <li><a [routerLink]="['/albums']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums</a></li>
