--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -22,6 +22,7 @@
                 <li><a [routerLink]="['/albums']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums</a></li>
                 <li>
                 <li><a [routerLink]="['/test']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Test</a></li>
+                <li><a [routerLink]="['/profile']"><i class="fa fa-user-circle fa-fw"></i>&nbsp;Profile</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-pencil-square-o fa-fw"></i>&nbsp;Blog<b class="caret"></b></a>
                     <ul class="dropdown-menu">
