--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -10,44 +10,78 @@
             </button>
             <a class="navbar-brand" [routerLink]="['/home']"><i class="fa fa-home fa-fw"></i>&nbsp;Photo Gallery</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="http://wp.me/p3mRWu-11L" target="_blank"><i class="fa fa-info fa-fw"></i>&nbsp;About</a>
                 </li>
-                <li>
-                    <a [routerLink]="['/photos']"><i class="fa fa-camera fa-fw"></i>&nbsp;Photos</a>
+                <li >
+                    <a [routerLink]="['/photos']" data-target="#bs-navbar-collapse" data-toggle="collapse" >
+                        <i class="fa fa-camera fa-fw"></i>&nbsp;Photos
+                    </a>
                 </li>
                 <li>
-                <li><a [routerLink]="['/albums']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums</a></li>
+                    <a [routerLink]="['/albums']" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                        <i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums
+                    </a>
+                </li>
                 <li>
-                <li><a [routerLink]="['/test']"><i class="fa fa-picture-o fa-fw"></i>&nbsp;Test</a></li>
-                <li><a [routerLink]="['/profile']"><i class="fa fa-user-circle fa-fw"></i>&nbsp;Profile</a></li>
+                    <a [routerLink]="['/test']" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                        <i class="fa fa-picture-o fa-fw"></i>&nbsp;Test
+                    </a>
+                </li>
+                <li *ngIf="isUserLoggedIn()">
+                    <a [routerLink]="['/profile']" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                        <i class="fa fa-user fa-fw"></i>&nbsp;Profile
+                    </a>
+                </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-pencil-square-o fa-fw"></i>&nbsp;Blog<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="fa fa-pencil-square-o fa-fw"></i>&nbsp;Blog<b class="caret"></b>
+                    </a>
                     <ul class="dropdown-menu">
+                        <!--
                         <li>
-                            <a href="https://github.com/chsakell" target="_blank"><i class="fa fa-github fa-fw"></i>&nbsp;Github</a>
+                            <a href="https://github.com/chsakell" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-github fa-fw"></i>&nbsp;Github
+                            </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/chsakellsblog" target="_blank"><i class="fa fa-twitter fa-fw"></i>&nbsp;Twitter</a>
+                            <a href="https://twitter.com/chsakellsblog" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-twitter fa-fw"></i>&nbsp;Twitter
+                            </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/chsakells.blog" target="_blank"><i class="fa fa-facebook fa-fw"></i>&nbsp;Facebook</a>
+                            <a href="https://www.facebook.com/chsakells.blog" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-facebook fa-fw"></i>&nbsp;Facebook
+                            </a>
                         </li>
                         <li>
-                            <a href="http://chsakell.com/2015/08/23/building-single-page-applications-using-web-api-and-angularjs-free-e-book/" target="_blank"><i class="fa fa-backward fa-fw"></i>&nbsp;Previous version</a>
+                            <a href="http://chsakell.com/2015/08/23/building-single-page-applications-using-web-api-and-angularjs-free-e-book/" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-backward fa-fw"></i>&nbsp;Previous version
+                            </a>
                         </li>
+                        -->
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user fa-fw"></i>&nbsp;{{getUserName()}}<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li *ngIf="!isUserLoggedIn()">
-                            <a [routerLink]="['/account/login']"><i class="fa fa-unlock-alt fa-fw"></i>&nbsp;Sign in</a>
+                            <a [routerLink]="['/account/login']" class="hidden-xs">
+                                <i class="fa fa-unlock-alt fa-fw"></i>&nbsp;Sign in
+                            </a>
+                            <a [routerLink]="['/account/login']" class="visible-xs" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-unlock-alt fa-fw"></i>&nbsp;Sign in
+                            </a>
                         </li>
                         <li *ngIf="isUserLoggedIn()">
-                            <a  [routerLink]="['/home']" (click)="logout()"><i class="fa fa-power-off fa-fw"></i>&nbsp;Logout</a>
+                            <a  [routerLink]="['/home']" (click)="logout()" class="hidden-xs" >
+                                <i class="fa fa-power-off fa-fw"></i>&nbsp;Logout
+                            </a>
+                            <a  [routerLink]="['/home']" (click)="logout()" class="visible-xs" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-power-off fa-fw"></i>&nbsp;Logout
+                            </a>
                         </li>
                     </ul>
                 </li>
