--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/login.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/login.component.html
@@ -1,8 +1,8 @@
 ﻿<div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" data-backdrop="static" >
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h1 class="text-center">
                     <span class="fa-stack fa-1x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
