--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -12,17 +12,19 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="http://wp.me/p3mRWu-11L" target="_blank"><i class="fa fa-info fa-fw"></i>&nbsp;About</a>
-                </li>
                 <li >
                     <a [routerLink]="['/photos']" data-target="#bs-navbar-collapse" data-toggle="collapse" >
                         <i class="fa fa-camera fa-fw"></i>&nbsp;Photos
                     </a>
                 </li>
-                <li>
+                <li *ngIf="isUserLoggedIn()">
                     <a [routerLink]="['/albums']" data-target="#bs-navbar-collapse" data-toggle="collapse">
                         <i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums
+                    </a>
+                </li>
+                <li *ngIf="isUserLoggedIn()">
+                    <a [routerLink]="['/messages']" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                        <i class="fa fa-envelope fa-fw"></i>&nbsp;Messages
                     </a>
                 </li>
                 <li>
@@ -30,38 +32,21 @@
                         <i class="fa fa-picture-o fa-fw"></i>&nbsp;Test
                     </a>
                 </li>
-                <li *ngIf="isUserLoggedIn()">
-                    <a [routerLink]="['/profile']" data-target="#bs-navbar-collapse" data-toggle="collapse">
-                        <i class="fa fa-user fa-fw"></i>&nbsp;Profile
-                    </a>
-                </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-pencil-square-o fa-fw"></i>&nbsp;Blog<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <!--
                         <li>
-                            <a href="https://github.com/chsakell" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
-                                <i class="fa fa-github fa-fw"></i>&nbsp;Github
+                            <a href="https://gitlab.com/eleks-if-camp2/Slowpoke" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-gitlab fa-fw"></i>&nbsp;Gitlab
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/chsakellsblog" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
-                                <i class="fa fa-twitter fa-fw"></i>&nbsp;Twitter
+                            <a href="https://trello.com/b/38DOGMZ3/simple-messanger" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-trello fa-fw"></i>&nbsp;Trello
                             </a>
                         </li>
-                        <li>
-                            <a href="https://www.facebook.com/chsakells.blog" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
-                                <i class="fa fa-facebook fa-fw"></i>&nbsp;Facebook
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://chsakell.com/2015/08/23/building-single-page-applications-using-web-api-and-angularjs-free-e-book/" target="_blank" data-target="#bs-navbar-collapse" data-toggle="collapse">
-                                <i class="fa fa-backward fa-fw"></i>&nbsp;Previous version
-                            </a>
-                        </li>
-                        -->
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -75,6 +60,22 @@
                                 <i class="fa fa-unlock-alt fa-fw"></i>&nbsp;Sign in
                             </a>
                         </li>
+                        <li *ngIf="!isUserLoggedIn()">
+                            <a [routerLink]="['/account/register']" class="hidden-xs">
+                                <i class="fa fa-user-plus fa-fw"></i>&nbsp;Register
+                            </a>
+                            <a [routerLink]="['/account/register']" class="visible-xs" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-user-plus fa-fw"></i>&nbsp;Register
+                            </a>
+                        </li>
+                        <li *ngIf="isUserLoggedIn()">
+                            <a [routerLink]="['/profile']" class="hidden-xs">
+                                <i class="fa fa-user fa-fw"></i>&nbsp;Profile
+                            </a>
+                            <a [routerLink]="['/profile']" class="visible-xs" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                                <i class="fa fa-user fa-fw"></i>&nbsp;Profile
+                            </a>
+                        </li>
                         <li *ngIf="isUserLoggedIn()">
                             <a  [routerLink]="['/home']" (click)="logout()" class="hidden-xs" >
                                 <i class="fa fa-power-off fa-fw"></i>&nbsp;Logout
@@ -83,6 +84,7 @@
                                 <i class="fa fa-power-off fa-fw"></i>&nbsp;Logout
                             </a>
                         </li>
+                        
                     </ul>
                 </li>
             </ul>
