--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/login.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/login.component.html
@@ -1,4 +1,4 @@
-﻿<div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+﻿<div id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" data-backdrop="static" >
         <div class="modal-content">
             <div class="modal-header">
