--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/register.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/account/register.component.html
@@ -1,4 +1,4 @@
-﻿<div id="registerModal" data-backdrop="static" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+﻿<div id="registerModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
