--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/home.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/home.component.html
@@ -84,7 +84,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; <a href="http://chsakell.com" target="_blank">chsakell's Blog</a> 2015</p>
+                <p>Copyright &copy; ThunderStorm team 2016</p>
             </div>
         </div>
     </footer>
