added API method for Friends,started work with friends page

--- a/aspnet5-angular2-typescript/src/PhotoGallery/Views/Home/Index.cshtml
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/lib/css/alertify.core.css" rel="stylesheet" />
     <link href="~/lib/css/alertify.bootstrap.css" rel="stylesheet" />
+    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     @*<link href="~/lib/css/alertify.default.css" rel="stylesheet" />*@
 }
 
@@ -30,4 +31,15 @@
     $(document).ready(function() {
         $('.fancybox').fancybox();
     });
+    $(function () {
+    var broadcaster = $.connection.broadcaster;
+ 
+    broadcaster.client.message = function (text) {
+        alert(text);
+    };
+ 
+    $.connection.hub.start().done(function () {
+        broadcaster.server.broadcast('hello from client');
+    });
+  });
 }
