--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/app.component.html
@@ -1,6 +1,6 @@
 ﻿<!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
+    <!--<div class="container">-->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -20,6 +20,11 @@
                 <li *ngIf="isUserLoggedIn()">
                     <a [routerLink]="['/albums']" data-target="#bs-navbar-collapse" data-toggle="collapse">
                         <i class="fa fa-picture-o fa-fw"></i>&nbsp;Albums
+                    </a>
+                </li>
+                <li *ngIf="isUserLoggedIn()">
+                    <a [routerLink]="['/search']" data-target="#bs-navbar-collapse" data-toggle="collapse">
+                        <i class="fa fa-search fa-fw"></i>&nbsp;Find friends
                     </a>
                 </li>
                 <li *ngIf="isUserLoggedIn()">
@@ -89,7 +94,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+   <!-- </div>-->
 </nav>
 
 <div>
