--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
@@ -28,20 +28,7 @@
 									</div>
 								</div>
 							</li>
-							<li class="left clearfix">
-								<span class="chat-img pull-left">
-									<img src="https://lh6.googleusercontent.com/-y-MY2satK-E/AAAAAAAAAAI/AAAAAAAAAJU/ER_hFddBheQ/photo.jpg" alt="User Avatar" class="img-circle">
-								</span>
-								<div class="chat-body clearfix">
-									<div class="header_sec">
-										<strong class="primary-font">Jack Sparrow</strong> <strong class="pull-right">
-										09:45AM</strong>
-									</div>
-									<div class="contact_sec">
-										<strong class="primary-font">(123) 123-456</strong> <span class="badge pull-right">3</span>
-									</div>
-								</div>
-							</li>
+						
 						</ul>
 					</div>
 				</div>
@@ -65,11 +52,10 @@
 					</ul>
 					</div><!--chat_area-->
 					<div class="message_write">
-						<textarea class="form-control" placeholder="type a message"></textarea>
-						<div class="clearfix"></div>
+						<textarea class="form-control" placeholder="type a message" #message></textarea>
 						<div class="chat_bottom">
 							<a href="#" class="pull-left upload_btn"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Add Files</a>
-							<button class="pull-right btn btn-success">Send</button>
+							<button (click)="sendMessage(message.value)" class="pull-right btn btn-success">Send</button>
 						</div>
 					</div>
 				</div>
