--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/profile.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/profile.component.html
@@ -9,7 +9,7 @@
                     <a class="fancybox" rel="gallery" href="{{user.Photo}}">
                         <img alt="User's photo" src="{{user.Photo}}" class="img-responsive thumbnail"> 
                     </a>
-					<!--<img alt="User's photo" src="{{photo}}" class="img-responsive thumbnail"> -->
+
                 </div>
 				<div class="col-sm-8 col-md-8 col-lg-8 ">
 					<table class="table table-user-information">
@@ -29,7 +29,7 @@
 							
 							<tr>
 								<td>Email</td>
-								<td><a href="mailto:{{user.Email}}">{{user.Email}}</a></td>
+								<td>{{user.Email}}</td>
 							</tr>
 							<tr>
 								<td>Date of Birthday: </td>
