--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
@@ -22,7 +22,7 @@
 					<a type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
-					<button  class="btn btn-info btn-xs " title="Send message">
+					<button (click)="createChat()" class="btn btn-info btn-xs " title="Send message">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
