--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
@@ -14,6 +14,7 @@
 					
 					<div class="member_list">
 						<ul class="list-unstyled">
+							
 							<li class="left clearfix">
 								<span class="chat-img pull-left">
 									<img src="https://lh6.googleusercontent.com/-y-MY2satK-E/AAAAAAAAAAI/AAAAAAAAAJU/ER_hFddBheQ/photo.jpg" alt="User Avatar" class="img-circle">
@@ -40,13 +41,13 @@
 					<!--new_message_head-->
 				<div class="chat_area">
 					<ul class="list-unstyled">
-						<li class="left clearfix admin_chat">
-							<span class="chat-img1 pull-right">
+						 <li class="left clearfix" *ngFor="let message of messages">
+							<span class="chat-img1 pull-left">
 								<img src="https://lh6.googleusercontent.com/-y-MY2satK-E/AAAAAAAAAAI/AAAAAAAAAJU/ER_hFddBheQ/photo.jpg" alt="User Avatar" class="img-circle">
 							</span>
 							<div class="chat-body1 clearfix">
-								<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-								<div class="chat_time pull-left">09:40PM</div>
+								<p>{{message.Text}}</p>
+								<div class="chat_time pull-right">{{message.Date}}</div>
 							</div>
 						</li>
 					</ul>
