--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/css/messages.component.css
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/css/messages.component.css
@@ -1,57 +1,10 @@
 .main_section{
     height: calc(100vh - 100px);
 }
-.all_conversation button {
-    background: #f5f3f3 none repeat scroll 0 0;
-    border: 1px solid #dddddd;
-    height: 38px;
-    text-align: left;
-    width: 100%;
-}
-.all_conversation i {
-    background: #e9e7e8 none repeat scroll 0 0;
-    border-radius: 100px;
-    color: #636363;
-    font-size: 17px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    width: 30px;
-}
-.all_conversation .caret {
-    bottom: 0;
-    margin: auto;
-    position: absolute;
-    right: 15px;
-    top: 0;
-}
-.all_conversation .dropdown-menu {
-    background: #f5f3f3 none repeat scroll 0 0;
-    border-radius: 0;
-    margin-top: 0;
-    padding: 0;
-    width: 100%;
-}
-.all_conversation ul li {
-    border-bottom: 1px solid #dddddd;
-    line-height: normal;
-    width: 100%;
-}
-.all_conversation ul li a:hover {
-    background: #dddddd none repeat scroll 0 0;
-    color:#333;
-}
-.all_conversation ul li a {
-    color: #333;
-    line-height: 30px;
-    padding: 3px 20px;
-}
+
 .member_list .chat-body {
     margin-left: 47px;
     margin-top: 0;
-}
-.top_nav {
-    overflow: visible;
 }
 .member_list .contact_sec {
     margin-top: 3px;
@@ -108,40 +61,6 @@
     border: 1px solid #dddddd;
 }
 
-
-.sub_menu_ {
-    background: #e8e6e7 none repeat scroll 0 0;
-    left: 100%;
-    max-width: 233px;
-    position: absolute;
-    width: 100%;
-}
-.sub_menu_ {
-    background: #f5f3f3 none repeat scroll 0 0;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    display: none;
-    left: 100%;
-    margin-left: 0;
-    max-width: 233px;
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-.all_conversation ul li:hover .sub_menu_ {
-    display: block;
-}
-.new_message_head button {
-    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-    border: medium none;
-}
-.new_message_head {
-    background: #f5f3f3 none repeat scroll 0 0;
-    float: left;
-    font-size: 13px;
-    font-weight: 600;
-    padding: 18px 10px;
-    width: 100%;
-}
 .message_section {
     border: 1px solid #dddddd;
 }
@@ -166,8 +85,9 @@
     margin-left: 50px;
 }
 .chat-body1 p {
-    background: #fbf9fa none repeat scroll 0 0;
+    background: #eef none repeat scroll 0 0;
     padding: 10px;
+    width: 100%;
 }
 .chat_area .admin_chat .chat-body1 {
     margin-left: 0;
