--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
@@ -22,11 +22,15 @@
 					<a type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
-					<button (click)="createChat()" class="btn btn-info btn-xs " title="Send message">
+					<div style="display:none"><!--костиль)))-->
+						<input #username [value]="user.Username">
+						<input #id [value]="user.Id">
+					</div>
+					<button (click)="createChat(id.value,username.value)" class="btn btn-info btn-xs " title="Send message">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
-				<div class="collapse" id="{{user.Username}}">
+				<div class="collapse" [id]="user.Username">
 					<span>Phone: {{user.Phone}}</span>
 					<span>Email: {{user.Email}}</span>
 					<span>Date of Birthday: {{user.BirthDate}}</span>
@@ -37,7 +41,7 @@
 			<li *ngIf="randomPeople.length==0" class="list-group-item text-left">
 				Not found people with this username
 			</li>
-			<li *ngIf="tenOrMorePeople" (click)="getPeople()" class="list-group-item text-left">
+			<li *ngIf="twentyOrMorePeople" (click)="getMorePeople()" class="list-group-item text-left">
 				<a class="btn btn-block btn-primary">
 					<i class="glyphicon glyphicon-refresh"></i>
 					Load more...
