--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends.component.html
@@ -5,14 +5,14 @@
 				Friends
 				<div id="custom-search-input">
 					<div class="input-group">
-						<input type="text" class=" search-query form-control" id="findFriends" placeholder="Friends" />
-						<button class="btn" type="button">
+						<input type="text" class=" search-query form-control" id="findFriends" placeholder="Friends" #searchUsername />
+						<button  (click)="search(searchUsername.value)"class="btn" type="button">
 							<span class=" glyphicon glyphicon-search"></span>
 						</button>
 					</div>
 				</div>
 			</li>
-			<li *ngFor="let user of randomPeople" class="list-group-item text-left">
+			<li *ngFor="let user of friends" class="list-group-item text-left">
 				<a class="fancybox" rel="gallery" href="{{user.Photo}}">
 					<img class="img-thumbnail" src="{{user.Photo}}">
 				</a>
@@ -22,7 +22,10 @@
 					<a type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
-					<button  class="btn btn-info btn-xs " title="Send message">
+					<div style="display:none"><!--костиль)))-->
+						<input #id [value]="user.Id">
+					</div>
+					<button (click)="goToChat(id.value)" class="btn btn-info btn-xs " title="Send message">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
@@ -34,12 +37,14 @@
 				</div>
 				<div class="break"></div>
 			</li>
-			
-			<li *ngIf="tenOrMoreFriends" class="list-group-item text-left">
-				<a class="btn btn-block btn-primary">
+			<li *ngIf="friends.length==0" class="list-group-item text-left">
+				Not found friends
+	 		</li>
+			<li *ngIf="twentyOrMoreFriends" (click)="getMoreFriends()" class="list-group-item text-left">
+				<button class="btn btn-block btn-primary">
 					<i class="glyphicon glyphicon-refresh"></i>
 					Load more...
-				</a>
+				</button>
 			</li>
 		</ul>
 	</div>
