--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
@@ -26,7 +26,7 @@
 						<input #username [value]="user.Username">
 						<input #id [value]="user.Id">
 					</div>
-					<button (click)="createChat(id.value,username.value)" class="btn btn-info btn-xs " title="Send message">
+					<button (click)="createChat(id.value,username.value)" class="btn btn-info btn-xs " title="Create chat">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
