--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends.component.html
@@ -22,12 +22,12 @@
 					<a type="button" class="btn btn-success btn-xs" data-toggle="collapse" href="#{{user.Username}}">
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
-					<div style="display:none"><!--костиль)))-->
+					<!--<div style="display:none">костиль)))
 						<input #id [value]="user.Id">
 					</div>
 					<button (click)="goToChat(id.value)" class="btn btn-info btn-xs " title="Send message">
 						<i class="fa fa-envelope fa-2x"></i>
-					</button>
+					</button>-->
 				</label>
 				<div class="collapse" id="{{user.Username}}">
 					<span>Phone: {{user.Phone}}</span>
