--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/messages/messages.component.html
@@ -6,17 +6,20 @@
 				<div class="row">
 					<div id="custom-search-input">
 						<div class="input-group">
-							<input type="text" class=" search-query form-control" placeholder="Chat" #chat/>
-							<button (click)="searchChat(chat.value)" class="btn btn-danger" type="button">
+							<input (keyup)="searchChat(chat.value)" type="text" class=" search-query form-control" placeholder="Chat" #chat>
+							<!--<button (click)="searchChat(chat.value)" class="btn btn-danger" type="button">
 								<span class=" glyphicon glyphicon-search"></span>
-							</button>
+							</button>-->
 						</div>
 					</div>
 					
 					<div class="member_list">
 						<ul class="list-unstyled">			
-							<li class="left clearfix">
-								<strong class="primary-font">Ihor Vasylechko</strong>
+							<li class="active" class="left clearfix" *ngFor="let chat of chats"  [ngClass]="{customActive: chat.Id === currentChatId}" (click)="onSelect(chat.Id)">
+								<input #id [value]="chat.Id" style="display:none">
+								<div  (click)="getMessage(id.value)">
+									<strong class="primary-font">{{chat.Name}}</strong>
+								</div>
 							</li>	
 						</ul>
 					</div>
@@ -25,7 +28,7 @@
 			<!--messages section -->
 			<div class="col-sm-9 message_section">
 				<div class="row">
-					<div class="chat_area" #chat angular2-auto-scroll lock-y-offset="10" observe-attributes>
+					<div class="chat_area" angular2-auto-scroll lock-y-offset="10" observe-attributes>
 						<a *ngIf="messages.length>=20" (click)="getMoreMessages()" >Load more...</a>
 						<ul class="list-unstyled">
 							<li class="left clearfix" *ngFor="let message of messages">
@@ -43,7 +46,10 @@
 					<div class="message_write">
 						<textarea class="form-control" placeholder="type a message" #message></textarea>
 						<div class="chat_bottom">
-							<a href="#" class="pull-left upload_btn"><i class="fa fa-cloud-upload" aria-hidden="true"></i>Add Files</a>
+							<input id="file-upload" type="file"  />
+							<!--<label for="file-upload" class="pull-left upload_btn"><a>
+									<i class="fa fa-cloud-upload" aria-hidden="true"></i>Add Files</a>
+								</label>-->
 							<button (click)="sendMessage(message.value)" class="pull-right btn btn-success">Send</button>
 						</div>
 					</div>
