added buttons for update view on message page, changed ctreating chat

--- a/aspnet5-angular2-typescript/src/PhotoGallery/Views/Home/Index.cshtml
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "PhotoGallery";
+    ViewBag.Title = "TS Messenger";
 }
 
 @section styles
@@ -23,7 +23,7 @@
 {
     <script src="~/lib/js/jquery.js"></script>
 	<!--<script src="~/lib/js/bootstrap.js"></script>-->
-    <script src="~/lib/js/jquery.signalR.js"></script>
+    <!--<script src="~/lib/signalr/jquery.signalR.js"></script>-->
 
     <script src="~/lib/js/jquery.fancybox.pack.js"></script>
     <script src="~/lib/js/alertify.min.js"></script>
@@ -52,5 +52,5 @@
         broadcaster.server.broadcast('hello from client');
     });
 
-  }); */
+    }); */
 }
