--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/css/messages.component.css
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/css/messages.component.css
@@ -141,3 +141,15 @@
     display: block;
     text-align :center;
 }
+
+.updateChat{
+    background: #01708f;
+    width: 100%;
+}
+.updateChat{
+    /*background: #31708f;*/
+    width: 100%;
+}
+.btn-success{
+    margin:5px;
+}
