--- a/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
+++ b/aspnet5-angular2-typescript/src/PhotoGallery/wwwroot/app/components/friends-search.component.html
@@ -21,10 +21,9 @@
                         <i class="fa fa-toggle-down fa-2x"></i>
                     </a>
 					<div style="display:none"><!--костиль)))-->
-						<input #username [value]="user.Username">
 						<input #id [value]="user.Id">
 					</div>
-					<button (click)="createChat(id.value,username.value)" class="btn btn-info btn-xs " title="Create chat">
+					<button (click)="createChat(id.value)" class="btn btn-info btn-xs " title="Create chat">
 						<i class="fa fa-envelope fa-2x"></i>
 					</button>
 				</label>
